# JamSouffrance

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Components/: Ai.cpp  Ai.hpp  Animation.cpp  Animation.hpp  CameraComp.cpp  CameraComp.hpp  Collision.cpp  Collision.hpp  Health.cpp  Health.hpp  IComponent.hpp  Movements.cpp  Movements.hpp  Object.cpp  Object.hpp  Position.cpp  Position.hpp  Text.cpp  Text.hpp
src/Entity/: Background.cpp  Background.hpp  Button.cpp  Button.hpp  Ennemy.cpp  Ennemy.hpp  Entity.cpp  Entity.hpp  Heart.cpp  Heart.hpp  Player.cpp  Player.hpp  Projectiles.cpp  Projectiles.hpp  rTypeCamera.cpp  rTypeCamera.hpp
src/Factory/: BackgroundFactory.cpp  BackgroundFactory.hpp  ButtonFactory.cpp  ButtonFactory.hpp  CameraFactory.cpp  CameraFactory.hpp  EnnemyFactory.cpp  EnnemyFactory.hpp  Factory.cpp  Factory.hpp  HeartFactory.cpp  HeartFactory.hpp  PlayerFactory.cpp  PlayerFactory.hpp  ProjectilesFactory.cpp  ProjectilesFactory.hpp
src/Network/: client.cpp  client.hpp  server.cpp  server.hpp
src/State/: Intro.cpp  Intro.hpp
src/System/: Audio.cpp  Audio.hpp  Core.cpp  Core.hpp  Draw.cpp  Draw.hpp  Input.cpp  Input.hpp  Keys.hpp  ScreenSize.hpp
